# practice

./: .editorconfig  .env  .gitignore  .markdownlint.json  Pipfile  gcc笔记.md  readme.txt  requirements.txt  server.py
OCR/: CMakeLists.txt  CMakeSettings.json  linux_build.sh  main.cpp
app/ocr/: Readme.md
c/: C语言笔记.md  gdb调试.md  test.c  test_abs_signed.c  大小端.md
c++/: gcc笔记.md
c++/awtk/: awtk.md
c++/qt/: qt笔记.md
c/base/: test_attribute.c  test_string.c
c/dlist/: test_dlist.c
c/linux/args_option/: Makefile  test_args_opts.c
c/nasm/: Makefile  fib.nasm  nasm笔记.md  puts.nasm  test_nasm.asm  笔记.md
c_c++/: gcc笔记.md
c_c++/base/: test.c
c_c++/gcc_test/: test.map
config/: astylerc  vscode_settings.json
dart/: flutter.md
dart/flutter_desktop/: pubspec.yaml
dart/flutter_desktop/lib/: iic_page.dart  main.dart
embed/: C语言及gcc总结.md  TensorFlowLite.md  i2c笔记.md  pcb.md  spi笔记.md  vivado.md  watchdog.md  嵌入式资源收集.md  总结.md  电子元件.md  电路知识.md  调试.md
embed/HarmonyOS/: 使用说明.md
embed/arduino/: arduino定制硬件.md
embed/arm_toolchain/: build_toolchain.md
embed/audio/: es8388.md  mic.md
embed/code/: uart.c
embed/demo/gd32/f103c8t6_hello/: CMakeLists.txt
embed/demo/gd32/f103c8t6_hello/applications/: main.c
embed/demo/gd32/f103c8t6_hello/board/: GD32F103C8T6_FLASH.ld  startup_gd32f10x_md.s
embed/demo/gd32/gd32f103c8t6_hello/: CMakeLists.txt
embed/demo/gd32/gd32f103c8t6_hello/applications/: main.c
embed/demo/gd32/gd32f103c8t6_hello/board/: GD32F103C8T6.ld  startup_gd32f10x_hd.s  startup_gd32f10x_md.s  startup_gd32f10x_xd.s  stlink_gd32f1x.cfg
embed/demo/stm32/: .gitignore
embed/demo/stm32/f103c8t6_freertos/: Makefile  f103c8t6_freertos.ioc
embed/demo/stm32/stm32f103/oled_demo_cmake/: CMakeLists.txt  Makefile  oled_demo.ioc  readme.md
embed/demo/stm32/stm32f103/oled_demo_cmake/Libs/myfont/: myfont.h
embed/demo/stm32/stm32f103/oled_demo_cmake/Src/: u8g2.c
embed/demo/stm32/stm32f103_adc/: Makefile  stm32f103_adc.ioc
embed/demo/stm32/stm32f767_tft_lcd/: Makefile  stm32f767_tft_lcd.ioc  说明.md
embed/demo/stm32/stm32f767ig_usb/: Makefile  Readme.md  stm32f767ig_usb.ioc
embed/esp32/: esp32.md
embed/freecad/: freecad.md
embed/freecad/test/: SCP_test.gcode  test.FCStd  test.FCStd1  test.stl
embed/kicad/: kicad学习笔记.md  kicad源码分析.md
embed/lceda/: test_script.js
embed/rt-thread/: rt-thread.md  移植rtt-nano到gd32f103上.md
embed/spice/: ngspice笔记.md  test.cir
embed/stm32/: qemu stm32 编译.md  stm32.md  stm32f103_BluePill.md
embed/stm32/stm32f767_demo/usb_demo/: usb_demo.ioc
embed/stm32/汇编/: 分析.md
embed/tools/dsview/: dsview.md  install.sh
embed/tools/dsview/data/: [usb]full_speed.dsl  [usb]stm32_usb_virtual_serial.dsl
embed/zephyr/: zephyr.md
embed/zephyr/hello_world/: CMakeLists.txt  prj.conf
embed/zephyr/hello_world/dts/: stm32.overlay.dts
embed/zephyr/hello_world/init/: pinmux.c
embed/zephyr/hello_world/src/: main.c
en/: 单词积累.md
linux/: Linux命令.md  test_ping.sh  工具.txt
linux/make_system/: 2.disk-mount.sh  3.pre.install.sh  DoSimpleSystem.2.sh  DoSimpleSystem.sh  HowToDo.1.sh  HowToDo.sh  build.2.sh  install_archlinux.sh
linux/vps/v2ray/: Note.txt
py/: paramiko使用说明.md  pyenv使用说明.md  python3笔记.md  python技巧.md  ssh_tools.py  test_codec.py
py/app/serial_tool/: app.py  serial_tool.py
py/application/app_lib/: config.py  tasks.py
py/arg_parse/: shell_tool.py
py/asyncio/: asyncio.md
py/dramatiq/: app.py  example.1.py  example.py
py/fab/: test.py
py/file/: file_operation.py
py/flask/: app.py  log_service.py
py/flask/templates/: index.html
py/flask/upload_file/: test.py
py/log_server/log_server/: install.sh
py/process/: common.py  test.py  test_common.py  test_paramiko.py  test_pool.py  test_shell.py
py/psutil/: test_psutil.py
py/remote/: test_pipe.py
py/remote/remote/: core.py
py/scripts/: astyle_download_unzip_build.py
py/serial/: test.py
py/ssh/: test.py
py/standard/: lambda_filter_map_reduce.py
py/standard/argparse/: shell_tool.py
py/standard/package/simple_package/: __init__.py
py/standard/string/: test.py
rust/: rust.md  tauri.md
rust/basic/: Cargo.toml
rust/basic/src/: main.rs
rust/hello_bevy/: Cargo.toml  build_bevy_examples.sh
rust/hello_bevy/src/: main.rs
rust/hello_iced/: Cargo.toml
rust/hello_iced/examples/: clock.rs
rust/hello_iced/src/: main.rs
rust/hello_tokio/: Cargo.toml
rust/hello_tokio/src/: main.rs
rust/hello_winit/: Cargo.toml
rust/hello_winit/src/: main.rs
rust/restaurant/: Cargo.toml
rust/restaurant/src/: back_of_order.rs  lib.rs
rust/tauri-svelte/: package.json  readme.md  vite.config.js
rust/tauri-svelte/src/: App.svelte  index.js
rust/tauri-svelte/src-tauri/: tauri.conf.json
rust/tauri-svelte/src-tauri/src/: main.rs
rust/tauri-svelte/src/components/: Header.svelte
rust/test_usb/src/: main.rs
shell/: test.sh  常用命令.txt
tools/: awtk.md  git笔记.md  latex笔记.md  linux技巧.md  manjaro笔记.md  openocd笔记.md  raspberry笔记.md  tools.md  工具收集.md  编译工具.md
tools/bochs/: 新手指南.md
tools/cmake/: CMakeLists.txt  build.sh  cmake常见用法.md  cmake笔记.md  test_build.cmake  test_cmake.cmake  tool.py
tools/docker/: docker笔记.md  使用说明.md
tools/docker/esp32/: docker-compose.yml
tools/docker/esp32/back/: Dockerfile  docker-compose.yml
tools/docker/gitlab/: Readme.md  docker-compose copy.yml  docker-compose.yml
tools/docker/service/: application.service  me.service
tools/linux/: .bashrc  Linux笔记.md  my.bashrc
tools/linux/make_system/: DoSimpleSystem.2.sh
tools/linux/wine/: wine笔记.md
tools/make/: make笔记.md
tools/newifi3/: 笔记.md
tools/openwrt/: 笔记.md
tools/scons/: scons笔记.md
tools/scons/examples/: SConstruct  hello.c
tools/scons/examples/libs/: SConscript
tools/scons/examples/src/: SConscript
tools/squid/: cn.url_regex.lst  squid.conf  说明.md
tools/vscode/: launch.json  vscode_launch.json  使用.md  使用笔记.md  插件开发.md  插件开发.txt
tools/windows/: windows工具.md  wsl.md
web/: web.md
web/react/: react.md  react笔记.md
web/vue/demo/: simple_router.html
web/vue/vue-app/: package.json
web/vue/vue-app/src/: App.vue
(+48 files in other folders)
