[package]
name = "hello_bevy"
version = "0.1.0"
authors = ["imxood <imxood@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4.0"
rand = "0.8.2"

# [profile.dev]
# opt-level = 0

# [profile.release]
# opt-level = 3
