[package]
name = "hello_iced"
version = "0.1.0"
authors = ["maxu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "*"

# [features]
# glow = ["iced_glow"]

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# iced_glow = { version = "0.1", path = "glow", optional = true}

[profile.release]
panic = 'abort'
